--- a/_posts/2020-03-11-341-Idea-1.md
+++ b/_posts/2020-03-11-341-Idea-1.md
@@ -1,22 +1,36 @@
 ---
 layout: post
 title:  "341 Idea 1"
-date:   2020-03-6 
+date:   2020-03-6
 permalink: INDN341
 ---
+## Creative creator idea: Bird Pest Control
+
+## This Issue
+Bird damage causes hundreds of millions of dollars in lost revenue to New Zealand agriculture every year. These pests are often introduced species that’s populations have boomed due to the supply of food they get from local crops.  Many Birds are pests that need to be managed in different ways and current solutions are often costly and time consuming,  my concept hopes to resolve some of these issues.  
+
+I have personal experience with this issue having worked on a vineyard and experiencing the amount of time money and effort that goes into bird control.
 
 
-## Best Idea 1  
-#### Bird Scaring device for agriculture 
-I have personal experance with this issue  
-Drones have already been employed for bird scaring but I believe there is room for improvement. 
-* Use of sirens 
-* Use of materials to increase birds fear 
-* Use of machine learning for bird tracking 
-* Bird tracking with aggressive flight manoeuvres 
-* Full automation of charging 
-* Use of salt guns   
- <img src="{{site.baseurl}}/assets/img/DesignImages/Gas_gun_bird_scarer.jpg">  
- <img src="{{site.baseurl}}/assets/img/DesignImages/bird-deterrent-kite.jpg">  
- <img src="{{site.baseurl}}/assets/img/DesignImages/bird_netting.png">  
+Examples of current pest control methods include shooting, poisoning, netting and gas guns.   
+<img src="{{site.baseurl}}/assets/img/DesignImages/Gas_gun_bird_scarer.jpg">  
+<img src="{{site.baseurl}}/assets/img/DesignImages/bird-deterrent-kite.jpg">  
+<img src="{{site.baseurl}}/assets/img/DesignImages/bird_netting.png">
 
+## The Solution?   
+
+The use of Drones to scare birds as already been tested. The fundamentals of the concept work as birds fear the buzzing foreign object flying towards them and will disperse. However there a still many issues that have meant this concept has not been adopted as a mainstream viable form of pest control.
+
+One of the key features of this creative creator will be the mechanism of automation. Implemented through machine learning. Other possible features may include:
+* Use of sirens
+* Use of form and materials to increase bird fear/dispersion
+* Bird tracking with aggressive flight manoeuvres mimicking a bird of prey.
+* Fully automation of charging  to increase utilisation.
+
+
+
+Quick Concept Sketch:
+<img src="{{site.baseurl}}/assets/img/DesignImages/ConceptSketch.jpg ">  
+
+Often pest control is associated with killing the animal this concept however is a lot more environmentally friendly as the birds are simple dispersed from the desired area, achieving the desired result without killing them.
+ 
