--- a/_posts/2020-03-11-341-Idea-1.md
+++ b/_posts/2020-03-11-341-Idea-1.md
@@ -26,6 +26,8 @@ One of the key features of this creative creator will be the mechanism of automa
 * Use of form and materials to increase bird fear/dispersion
 * Bird tracking with aggressive flight manoeuvres mimicking a bird of prey.
 * Fully automation of charging  to increase utilisation.
+* Refecitve materials
+* Water
 
 
 
