--- a/_posts/2020-05-03-Project_2.md
+++ b/_posts/2020-05-03-Project_2.md
@@ -7,21 +7,28 @@ img:
 
 ## Idea Analyse
 a) Context:
-- What is your creative creator for?  
+- *What is your creative creator for?*
   Pest, Specifically birds. The original inspiration came from working on a vineyard and seeing first-hand the effects birds have on the crops and how much money and time is spent trying to keep the pest off the property.
 
 
-- Where would it be placed?  
+- *Where would it be placed?*  
 Any business where pest damage from birds is affecting the businesses ability to function. This is probably predominantly agriculture but could also include conservation and the airline industry
 
 
-- Who would be interested in using, experiencing or interacting with it?  
+- *Who would be interested in using, experiencing or interacting with it?*  
 Businesses spend a lot of time and money on controlling pests this creative creator would reduce the time and cost associated with this issue. Currently some quadcopters are used in viticulture to reduce pest damage and are moderately effective at doing so (The seed of my idea) . However currently they are controlled by a human pilot. And are very much in the testing faze as other more common pest control method such as netting and shooting are still much more ubiquitous.
 
-- Why is it innovative and meaningful?  
+- *Why is it innovative and meaningful?*  
 The key innovations that my separate my creative creator from the seed of my idea are.
 Machine learning based automation of the system. This will remove the need for a human pilot which will severely reduce the operational cost of the pest control method and will justify the initial investment in my creative creator over other method of pest control.
 Automation of this processed reduces operational cost but will also increase the utilisation of a tool such as this as it can continuously flown even through the night. Except for when the battery needs to be charged or replaced. A process I also believe can be automated,
 
-- Does the output visualise or materialise the input in an impressive and provocative way?  
+- *Does the output visualise or materialise the input in an impressive and provocative way?*  
 The input being sensory data from the camera and possibly other location-based sensing equipment will be processed and utilised to control the drones flight path and pest control methods. This impressive processing will output the control for the drone and will determine its pest control methods.
+
+b) Type and range of input:
+- *How can it receive/find/sense the input?*
+The primary input as with regular consumer quadcopter will be the front mounted camera on the quadcopter. This visual data would then be processed onboard using image processing software that would identify birds or paths ideal for dispersing the pests.
+
+- *What are the maximum and minimum, or possible values of the input?*
+The video input does not need to be of photorealistic quality as with some consumer photography quadcopters as this will require a large amount of power and will be slower to process.  480p or 720p video will be adequate. IR distance sensors my also be used to help with the self-preservation of the quadcopter.  
