--- a/_posts/2020-05-10-Concepts.md
+++ b/_posts/2020-05-10-Concepts.md
@@ -4,4 +4,4 @@ title:  "Concept Designs"
 date:   2020-05-10
 img:
 ---
-<img src="{{site.baseurl}}/assets/img/DesignImages/DroneConcept1.jpg">
+<img src="{{site.baseurl}}/assets/img/DesignImages/DroneConcept1.JPG">
