--- a/_posts/2020-05-10-Concepts.md
+++ b/_posts/2020-05-10-Concepts.md
@@ -5,3 +5,4 @@ date:   2020-05-10
 img:
 ---
 <img src="{{site.baseurl}}/assets/img/DesignImages/DroneConcept1.JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.JPG">
