more concept angles

--- a/_posts/2020-05-10-Concepts.md
+++ b/_posts/2020-05-10-Concepts.md
@@ -6,3 +6,7 @@ img:
 ---
 <img src="{{site.baseurl}}/assets/img/DesignImages/DroneConcept1.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.1JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.2JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.3JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.4JPG">
