--- a/_posts/2020-05-10-Concepts.md
+++ b/_posts/2020-05-10-Concepts.md
@@ -8,5 +8,5 @@ img:
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.1.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.2.JPG">
-<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.3.JPG>
-<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.4JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.3.JPG">
+<img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.4.JPG">
