--- a/_posts/2020-05-10-Concept_2.md
+++ b/_posts/2020-05-10-Concept_2.md
@@ -1,10 +1,9 @@
 ---
 layout: post
-title:  "Concept Designs"
+title:  "Concept Design Two"
 date:   2020-05-10
 img:
 ---
-<img src="{{site.baseurl}}/assets/img/DesignImages/DroneConcept1.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.1.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.2.JPG">
