--- a/_posts/2020-05-06-Concept_1.md
+++ b/_posts/2020-05-06-Concept_1.md
@@ -5,3 +5,4 @@ date:   2020-05-06
 img:
 ---
 <img src="{{site.baseurl}}/assets/img/DesignImages/DroneConcept1.JPG">
+I began the conceptual phase of the creative creators form by simply building a basic quadcopter and thinking about the form and dimensions and special functions of my creative creator. With the issue in mind, I realised one of the key advantages this product would have over the bird deterrents is that it is mobile.  This means the processing behind the camera was important. I settled on the Arduino Mega 2560 as it has the greatest amount of processing power.
