--- a/_posts/2020-05-10-Concept_2.md
+++ b/_posts/2020-05-10-Concept_2.md
@@ -5,7 +5,16 @@ date:   2020-05-10
 img:
 ---
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.JPG">
+
+ After completing some more researching on the current state of bird scaring technology. I was able to define a better direction for my product. The first being the overall form of the Quadcopter. Falconry, the use of Hawks and Falcons for the hunting of birds is an old art form that is still practiced on some vineyards as a form of pest control. Hawks being the natural predator for birds that generally feed of fruits.   
+
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.1.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.2.JPG">
+
+The other key feature of this concept is the speaker formed into the underbody of the quadcopter. Speakers can preform a similar function to a gas gun. In producing load noises to scare pests away. It also enables a lot of variability in the way the product is utilised for specific purposes. Variable sounds is also important as birds are known to get used to the sound of gas guns ect, and will eventually ignore them.
+
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.3.JPG">
 <img src="{{site.baseurl}}/assets/img/DesignImages/Drone2.4.JPG">
+
+The colours of this minimalist design keep the product modern but also hint at the inspiration of the form. The colour in the face makes the key predatory features more visible to the prey. While the brown and white blade shrouds. (wings) form a common Hawk wing patten when viewed from the front. The direction most of the pests will observe the quadcopter from.   
+   
